# home-edge

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.cargo/: config.toml
.githooks/: pre-push
config/: default.toml
crates/controller/: Cargo.toml
crates/controller/src/: app.rs  area_registry_store.rs  auth_store.rs  config.rs  core.rs  entity_view.rs  ha_api.rs  ha_auth.rs  ha_mobile.rs  ha_webhook.rs  ha_ws.rs  history_store.rs  http.rs  label_registry_store.rs  lib.rs  logbook_store.rs  logging.rs  long_lived_token_store.rs  main.rs  mobile_device_store.rs  mobile_entity_store.rs  notification_store.rs  person_store.rs  service.rs  state_store.rs  storage.rs  templates.rs  zeroconf.rs  zigbee_device_store.rs  zigbee_entity_store.rs  zigbee_integration.rs  zone_store.rs
crates/controller/templates/: _base_app.html  _base_wizard.html  _css.html  _icons.html  area_detail.html  areas.html  authorize.html  ble_scan.html  dashboard.html  developer_tools.html  device_detail.html  devices.html  entity_edit.html  history.html  logbook.html  notifications.html  onboarding.html  profile.html  settings.html  settings_users.html  system.html  zigbee_device_detail.html  zigbee_devices.html  zigbee_entity_edit.html  zone_edit.html
crates/controller/templates/fragments/: ble_results.html  sensors.html  zigbee_devices.html  zigbee_entities.html
crates/controller/templates/more_info/: _binary_sensor.html  _button.html  _climate.html  _cover.html  _default.html  _fan.html  _light.html  _lock.html  _scene.html  _script.html  _select.html  _sensor.html  _switch.html
crates/controller/tests/: contract_auth.rs  contract_mobile_registration.rs  contract_mobile_webhook.rs  contract_services.rs  contract_zeroconf.rs  contract_zigbee.rs  onboarding_contract.rs  ux_parity.rs
crates/controller/tests/support/: mod.rs
crates/ha-types/: Cargo.toml
crates/ha-types/src/: api.rs  context.rs  core_state.rs  entity.rs  event.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docker/: Dockerfile.build  smoke-test.sh
docs/: ha-core-ui-flow-diagram.md  milestone-0.md  onboarding-contract.md  storage-durability.md  ui-architecture.md  ui-performance.md  ux-parity.toml
screenshots/: index.html
scripts/: check-ux-parity.sh  install.sh  screenshot.js  upgrade.sh
systemd/: pi-control-plane.service
xtask/: Cargo.toml
xtask/src/: main.rs
