[workspace]
members = ["crates/controller", "crates/ha-types", "xtask"]
# xtask is excluded from the default build so `cargo build` only builds the product.
default-members = ["crates/controller", "crates/ha-types"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2"
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = { version = "0.6", features = ["getrandom", "std"] }
axum = { version = "0.8.4", default-features = false, features = ["form", "http1", "json", "query", "tokio", "ws"] }
axum-test = { version = "17", features = ["ws"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
ha-types = { path = "crates/ha-types" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.0", features = ["fs", "macros", "net", "rt", "signal", "sync", "time"] }
toml = "0.9.2"
tower = { version = "0.5.2", default-features = false, features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
hostname = "0.4"
local-ip-address = "0.6.3"
mdns-sd = "0.18.2"
minijinja = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
