[package]
name = "home-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["transport_wifi"]
transport_wifi = []
transport_ble = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
axum.workspace = true
clap.workspace = true
ha-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
local-ip-address.workspace = true
mdns-sd.workspace = true
uuid.workspace = true

[dev-dependencies]
axum-test.workspace = true
tokio = { workspace = true, features = ["test-util"] }
